# my_python_project

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run  tox.ini
.github/workflows/: ci.yml
docs/: Interview Questions and Answers.md  Interview Questions.md  Setup Project.md
docs/notebooks/: Question 1.ipynb
jobs/: job-domain-driven-design.json  job-generate-test-data.json  job-sql-generator.json
poc/: setup.sh
poc/customer-api/: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
poc/customer-api/docs/: index.md
poc/customer-api/e2e/: test.http
poc/customer-api/src/customer_api/: config.py  crud.py  main.py  models.py
poc/customer-api/tests/: conftest.py  test_customers.py
prompt_templates/: prompt-domain-driven-design.md  prompt-sql-generator.md  prompt-test-data-generator.md  prompt-ultimate.md
prompts/: customer-schema.json  progressive-api-design.md
src/langchain_poc/: main.py  output_writers.py
src/my_package/: hello.py  linkedin_scraper.py  load_prompts.py  openai_client.py
src/my_package/resources/: prompts.json
src/util/: json_reader.py  slugify.py
tests/langchain_poc/: test_main.py
tests/util/: test_json_reader.py  test_slugify.py
