[tool.poetry]
name        = "langchain_poc"
version     = "2.0.5"
description = "First LangChain PoC using OpenAI"
authors     = ["Bobwares <you@example.com>"]

packages    = [{ include = "langchain_poc", from = "src" }]

[tool.poetry.dependencies]
python              = "^3.11"
langchain           = "~0.3.0"
langchain-community = "~0.3.0"
langchain-openai    = "~0.3.0"
python-dotenv       = "^1.0"

[tool.poetry.scripts]
lc-demo = "langchain_poc.main:main"
