[tool.poetry]
name = "customer-api"
version = "0.1.0"
description = ""
authors = ["bobwares <robertadelmann@yahoo.com>"]
readme = "README.md"
packages = [{include = "customer_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.11.4"
python-dotenv = "^1.1.0"
openai = "^1.77.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
email-validator = "^2.2.0"
pydantic-settings = "^2.9.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
flake8 = "^7.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
tox = "^4.25.0"
selenium = "^4.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
